# sonori

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  RELEASING.md  cliff.toml  config.json  config.toml  flake.nix  install-desktop.sh
.github/workflows/: release.yml
desktop/: README.md  com.github.0xPD33.sonori.desktop  com.github.0xPD33.sonori.metainfo.xml  dev.sonori.metainfo.xml  sonori.desktop
desktop/icons/: README.md
src/: audio_capture.rs  audio_processor.rs  backend_manager.rs  config.rs  copy.rs  download.rs  global_shortcuts.rs  ipc.rs  lib.rs  main.rs  portal_input.rs  portal_tokens.rs  post_processor.rs  prelude.rs  real_time_transcriber.rs  silero_audio_processor.rs  sound_generator.rs  sound_player.rs  stats_reporter.rs  system_tray.rs  transcript_writer.rs  transcription_processor.rs  transcription_stats.rs
src/backend/: ctranslate2.rs  factory.rs  mod.rs  onnx_utils.rs  traits.rs  whisper_cpp.rs
src/backend/moonshine/: backend.rs  mod.rs  model.rs  tokenizer.rs
src/backend/parakeet/: backend.rs  decoder.rs  mel.rs  mod.rs  model.rs  tokenizer.rs
src/enhancement/: llama_model.rs  mod.rs
src/ui/: app.rs  batch_text_renderer.rs  button.wgsl  button_panel.rs  button_panel.wgsl  button_texture.rs  buttons.rs  common.rs  event_handler.rs  gpu_utils.rs  layout_manager.rs  loading_animation.rs  mod.rs  quad.wgsl  render_context.rs  render_pipeline.rs  rounded_rect.wgsl  scroll_state.rs  scrollbar.rs  scrollbar.wgsl  settings_panel.rs  settings_panel.wgsl  settings_window.rs  spectogram.rs  status_bar.rs  status_bar.wgsl  text_processor.rs  text_renderer.rs  text_window.rs  text_window.wgsl  timer_badge.rs  tooltip.rs  tooltip.wgsl  typewriter.rs  viewport.rs  window.rs
src/ui/widgets/: label.rs  mod.rs  select.rs  slider.rs  toggle.rs  widget.wgsl  widget_renderer.rs
