[package]
name = "sonori"
version = "0.7.6"
edition = "2021"

[dependencies]
portaudio = "0.8.0"
cpal = "0.16"
ct2rs = { version = "0.9.6", features = ["whisper"] }
ndarray = "0.16.1"
serde_json = "1.0"
reqwest = { version = "0.12.14", features = ["stream", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
anyhow = "1.0.97"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.9.8"
parking_lot = "0.12.1"
clap = { version = "4.5.21", features = ["derive"] }
winit = { version = "0.30.5", git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
wgpu = "25.0.2"
smithay-client-toolkit = "0.20.0"
pollster = "0.4.0"
rustfft = "6.1.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
glyphon = "0.9.0"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
zbus = "5.0"
xkbcommon = { version = "0.7", features = ["wayland"] }
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
image = "0.25.5"
chrono = "0.4.35"
num_cpus = "1.16"
whisper-rs = { version = "0.15.1", features = ["openblas", "vulkan"] }
hound = "3.5"
tokenizers = "0.22"
llama-cpp-2 = { version = "0.1.131", features = ["vulkan"] }  # Shares ggml with whisper-rs

[features]
default = []
# Enable runtime CPU feature detection
std = ["std_detect"]
std_detect = []
# Backends
backend-moonshine = []
backend-parakeet = []
# ORT execution providers
ort-cpu = [] 
ort-cuda = ["ort/cuda"]
ort-tensorrt = ["ort/tensorrt"]


[package.metadata.release]
publish = false          # Don't publish to crates.io
push = true              # Push automatically
sign-tag = false         # No GPG signing
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release sonori version {{version}}"
